--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -304,12 +304,7 @@
 
     <div *ngIf="selectedSection === 'project'">
         <h3 class="text-xl font-semibold mb-4">Add Project</h3>
-
-
-        
-            
-
-                    <form #projectNgForm="ngForm" (ngSubmit)="submitProject(projectNgForm)">
+ <form #projectNgForm="ngForm" (ngSubmit)="submitProject(projectNgForm)">
                         <div class="grid grid-cols-6 gap-4">
 
                             <!-- Customer Name -->
@@ -459,9 +454,159 @@
                             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
                         </div>
                     </form>
-                
+                <!-- Edit Modal -->
+<div *ngIf="isEditProjectModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-[1000]" (click)="closeEditProjectModal()">
+    <div class="bg-white p-6 rounded-lg w-1/3" (click)="$event.stopPropagation()">
+      <h3 class="text-xl font-semibold mb-4">Edit Project</h3>
+      <form #editProjectForm="ngForm" (ngSubmit)="updateProject(editProjectForm); $event.preventDefault()">
+        <div class="grid grid-cols-6 gap-4">
+          <!-- Customer Name -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Customer Name*</label>
+            <select required class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.customer_id" #editCustomerId="ngModel" name="customer_id"
+              [ngClass]="{'border-red-500': (editCustomerId.invalid && editCustomerId.touched) || (editProjectForm.submitted && editCustomerId.invalid)}">
+              <option value="" disabled selected>Select Customer</option>
+              <option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
+                {{ customer.customer_name }}
+              </option>
+            </select>
+            <span class="text-red-500 text-sm"
+              *ngIf="(editCustomerId.invalid && editCustomerId.touched) || (editProjectForm.submitted && editCustomerId.invalid)">
+              Customer Name is required
+            </span>
+          </div>
+  
+          <!-- Project Name -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Project Name*</label>
+            <input type="text" required class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.project_name" #editProjectName="ngModel" name="project_name"
+              [ngClass]="{'border-red-500': (editProjectName.invalid && editProjectName.touched) || (editProjectForm.submitted && editProjectName.invalid)}">
+            <span class="text-red-500 text-sm"
+              *ngIf="(editProjectName.invalid && editProjectName.touched) || (editProjectForm.submitted && editProjectName.invalid)">
+              Project Name is required
+            </span>
+          </div>
+  
+          <!-- Planned Start Date -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Planned Start Date*</label>
+            <input type="date" required class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.planned_start_date" #editPlannedStartDate="ngModel"
+              name="planned_start_date"
+              [ngClass]="{'border-red-500': (editPlannedStartDate.invalid && editPlannedStartDate.touched) || (editProjectForm.submitted && editPlannedStartDate.invalid)}">
+            <span class="text-red-500 text-sm"
+              *ngIf="(editPlannedStartDate.invalid && editPlannedStartDate.touched) || (editProjectForm.submitted && editPlannedStartDate.invalid)">
+              Planned Start Date is required
+            </span>
+          </div>
+  
+          <!-- Actual Start Date -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Actual Start Date</label>
+            <input type="date" class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.actual_start_date" name="actual_start_date">
+          </div>
+  
+          <!-- Type of Project -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Type of Project*</label>
+            <select required class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.type_of_project_id" #editTypeOfProjectId="ngModel"
+              name="type_of_project_id"
+              [ngClass]="{'border-red-500': (editTypeOfProjectId.invalid && editTypeOfProjectId.touched) || (editProjectForm.submitted && editTypeOfProjectId.invalid)}">
+              <option value="" disabled selected>Select Type</option>
+              <option *ngFor="let project of optionTypeOfProject" [value]="project.type_of_project_id">
+                {{ project.project_type_name }}
+              </option>
+            </select>
+            <span class="text-red-500 text-sm"
+              *ngIf="(editTypeOfProjectId.invalid && editTypeOfProjectId.touched) || (editProjectForm.submitted && editTypeOfProjectId.invalid)">
+              Type of Project is required
+            </span>
+          </div>
+  
+          <!-- Type of Engagement -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Type of Engagement*</label>
+            <select required class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.type_of_engagement_id" #editTypeOfEngagementId="ngModel"
+              name="type_of_engagement_id"
+              [ngClass]="{'border-red-500': (editTypeOfEngagementId.invalid && editTypeOfEngagementId.touched) || (editProjectForm.submitted && editTypeOfEngagementId.invalid)}">
+              <option value="" disabled selected>Select Type of Engagement</option>
+              <option *ngFor="let engagement of optionTypeOfEngagement" [value]="engagement.type_of_engagement_id">
+                {{ engagement.type_of_engagement_name }}
+              </option>
+            </select>
+            <span class="text-red-500 text-sm"
+              *ngIf="(editTypeOfEngagementId.invalid && editTypeOfEngagementId.touched) || (editProjectForm.submitted && editTypeOfEngagementId.invalid)">
+              Type of Engagement is required
+            </span>
+          </div>
+  
+          <!-- Project Manager -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Project Manager*</label>
+            <select required class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.project_manager_id" #editProjectManagerId="ngModel"
+              name="project_manager_id"
+              [ngClass]="{'border-red-500': (editProjectManagerId.invalid && editProjectManagerId.touched) || (editProjectForm.submitted && editProjectManagerId.invalid)}">
+              <option value="" disabled selected>Select Project Manager</option>
+              <option *ngFor="let user of optionUsers" [value]="user.user_id">
+                {{ user.user_first_name }} {{ user.user_last_name }}
+              </option>
+            </select>
+            <span class="text-red-500 text-sm"
+              *ngIf="(editProjectManagerId.invalid && editProjectManagerId.touched) || (editProjectForm.submitted && editProjectManagerId.invalid)">
+              Project Manager is required
+            </span>
+          </div>
+  
+          <!-- Project Status -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Project Status*</label>
+            <select required class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.project_status_id" #editProjectStatusId="ngModel"
+              name="project_status_id"
+              [ngClass]="{'border-red-500': (editProjectStatusId.invalid && editProjectStatusId.touched) || (editProjectForm.submitted && editProjectStatusId.invalid)}">
+              <option value="" disabled selected>Select Status</option>
+              <option *ngFor="let status of optionProjectStatus" [value]="status.project_status_id">
+                {{ status.status_name }}
+              </option>
+            </select>
+            <span class="text-red-500 text-sm"
+              *ngIf="(editProjectStatusId.invalid && editProjectStatusId.touched) || (editProjectForm.submitted && editProjectStatusId.invalid)">
+              Project Status is required
+            </span>
+          </div>
+  
+          <!-- Tentative End Date -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Tentative End Date</label>
+            <input type="date" class="border p-2 w-full rounded-md"
+              [(ngModel)]="editProjectFormData.tentative_end_date" name="tentative_end_date">
+          </div>
+  
+          <!-- Project Description -->
+          <div class="form-group">
+            <label class="block mb-2 font-semibold">Project Description</label>
+            <textarea class="border p-2 w-full rounded-md" rows="3"
+              placeholder="Enter project details..." [(ngModel)]="editProjectFormData.project_description"
+              name="project_description"></textarea>
+          </div>
+        </div>
+  
+        <!-- Submit Button -->
+        <div class="mt-4">
+          <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Update</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
         <div class="rounded-lg w-full overflow-x-auto">
+            
             <!-- Filter Section -->
             <div class="min-w-max">
                 <div class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full">
@@ -625,6 +770,8 @@
                             <td class="border p-2">{{ project.tentative_end_date | date:'dd-MMM-yyyy' }}</td>
                             <td class="border p-2">{{ project.project_description }}</td>
                             <td class="border p-2">
+                                <button class="bg-blue-500 text-white px-2 py-1 rounded mr-2" (click)="openEditProjectModal(project)">Edit</button>
+
                                 <button class="bg-red-500 text-white px-2 py-1 rounded"
                                     (click)="deleteProject(project.project_id)">Delete</button>
                             </td>
