--- a/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
+++ b/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
@@ -4,25 +4,33 @@
         <!-- Row 1 -->
         <div>
             <label class="block mb-2 font-semibold">Customer Name*</label>
-            <select [(ngModel)]="selectedCustomerId" name="customer" (change)="filterProjects()"
-                class="border p-2 w-full rounded-md">
-                <option value="" disabled selected>Select Customer</option>
-                <option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
-                    {{ customer.customer_name }}
-                </option>
-            </select>
-        </div>
+            <ng-select [(ngModel)]="selectedCustomerId" 
+                       name="customer" 
+                       (change)="filterProjects()"
+                       [searchable]="true"
+                       [clearable]="true"
+                       class="custom-ng-select">
+              <ng-option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
+                {{ customer.customer_name }}
+              </ng-option>
+            </ng-select>
+          </div>
 
-        <div>
+
+          <div>
             <label class="block mb-2 font-semibold">Project Name*</label>
-            <select [(ngModel)]="selectedProjectId" [disabled]="filteredProjects.length === 0"
-                class="border p-2 w-full rounded-md" (change)="onProjectChange($event)">
-                <option value="" disabled selected>Select Project</option>
-                <option *ngFor="let project of filteredProjects" [value]="project.project_id">
-                    {{ project.project_name }}
-                </option>
-            </select>
-        </div>
+            <ng-select [(ngModel)]="selectedProjectId"
+                       [disabled]="!selectedCustomerId || filteredProjects.length === 0"
+                       (change)="onProjectChange($event)"
+                       [searchable]="true"
+                       [clearable]="true"
+                       class="custom-ng-select">
+              <ng-option *ngFor="let project of filteredProjects" 
+                         [value]="project.project_id">
+                {{ project.project_name }}
+              </ng-option>
+            </ng-select>
+          </div>
 
 
         <div>
@@ -34,24 +42,33 @@
 
         <div>
             <label class="block mb-2 font-semibold">Employee Name*</label>
-            <select [(ngModel)]="selectedEmployeeId" name="employee" class="border p-2 w-full rounded-md">
-                <option value="" disabled selected>Select Employee</option>
-                <option *ngFor="let employee of optionEmployees" [value]="employee.user_id">
-                    {{ employee.user_first_name }} {{ employee.user_last_name }}
-                </option>
-            </select>
-        </div>
+            <ng-select [(ngModel)]="selectedEmployeeId"
+                       name="employee"
+                       [searchable]="true"
+                       [clearable]="true"
+                       class="custom-ng-select">
+              <ng-option [value]="null" disabled hidden>Select Employee</ng-option>
+              <ng-option *ngFor="let employee of optionEmployees" 
+                         [value]="employee.user_id">
+                {{ employee.user_first_name }} {{ employee.user_last_name }}
+              </ng-option>
+            </ng-select>
+          </div>
 
-        <div>
+          <div>
             <label class="block mb-2 font-semibold">Project Role*</label>
-            <select [(ngModel)]="selectedProjectRoleId" name="projectRole" class="border p-2 w-full rounded-md">
-                <option value="" disabled selected>Select Project Role</option>
-                <option *ngFor="let role of optionProjectRoles" [value]="role.project_role_id">
-                    {{ role.project_role_name }}
-                </option>
-            </select>
-        </div>
-
+            <ng-select [(ngModel)]="selectedProjectRoleId"
+                       name="projectRole"
+                       [searchable]="true"
+                       [clearable]="true"
+                       class="custom-ng-select">
+              <ng-option [value]="null" disabled hidden>Select Project Role</ng-option>
+              <ng-option *ngFor="let role of optionProjectRoles" 
+                         [value]="role.project_role_id">
+                {{ role.project_role_name }}
+              </ng-option>
+            </ng-select>
+          </div>
 
 
         <!-- Row 2 -->
@@ -147,7 +164,7 @@
                 (ngSubmit)="updateAssignTeam(editAssignTeamForm); $event.preventDefault()">
                 <div class="grid grid-cols-4 gap-4">
                     <!-- Customer Name -->
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label class="block mb-2 font-semibold">Customer Name*</label>
                         <select [(ngModel)]="editSelectedCustomerId" name="editCustomer"
                             class="border p-2 w-full rounded-md" required>
@@ -156,10 +173,24 @@
                                 {{ customer.customer_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+                    <div class="form-group">
+                        <label class="block mb-2 font-semibold">Customer Name*</label>
+                        <ng-select [(ngModel)]="editSelectedCustomerId"
+                                   name="editCustomer"
+                                   [searchable]="true"
+                                   [clearable]="true"
+                                   class="custom-ng-select"
+                                   required>
+                          <ng-option *ngFor="let customer of optionCustomers" 
+                                     [value]="customer.customer_id">
+                            {{ customer.customer_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
 
                     <!-- Project Name -->
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label class="block mb-2 font-semibold">Project Name*</label>
                         <select [(ngModel)]="editSelectedProjectId" name="editProject"
                             class="border p-2 w-full rounded-md" required>
@@ -168,10 +199,25 @@
                                 {{ project.project_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
 
-                    <!-- Employee Name -->
                     <div class="form-group">
+                        <label class="block mb-2 font-semibold">Project Name*</label>
+                        <ng-select [(ngModel)]="editSelectedProjectId"
+                                   name="editProject"
+                                   [searchable]="true"
+                                   [clearable]="true"
+                                   [disabled]="!editSelectedCustomerId || filteredProjects.length === 0"
+                                   class="custom-ng-select"
+                                   required>
+                          <ng-option *ngFor="let project of filteredProjects" 
+                                     [value]="project.project_id">
+                            {{ project.project_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
+                    <!-- Employee Name -->
+                    <!-- <div class="form-group">
                         <label class="block mb-2 font-semibold">Employee Name*</label>
                         <select [(ngModel)]="editSelectedEmployeeId" name="editEmployee"
                             class="border p-2 w-full rounded-md" required>
@@ -180,10 +226,25 @@
                                 {{ employee.user_first_name }} {{ employee.user_last_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+                      <!-- Employee Name -->
+  <div class="form-group">
+    <label class="block mb-2 font-semibold">Employee Name*</label>
+    <ng-select [(ngModel)]="editSelectedEmployeeId"
+               name="editEmployee"
+               [searchable]="true"
+               [clearable]="true"
+               class="custom-ng-select"
+               required>
+      <ng-option *ngFor="let employee of optionEmployees" 
+                 [value]="employee.user_id">
+        {{ employee.user_first_name }} {{ employee.user_last_name }}
+      </ng-option>
+    </ng-select>
+  </div>
 
                     <!-- Project Role -->
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label class="block mb-2 font-semibold">Project Role*</label>
                         <select [(ngModel)]="editSelectedProjectRoleId" name="editProjectRole"
                             class="border p-2 w-full rounded-md" required>
@@ -192,7 +253,21 @@
                                 {{ role.project_role_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+                    <div class="form-group">
+                        <label class="block mb-2 font-semibold">Project Role*</label>
+                        <ng-select [(ngModel)]="editSelectedProjectRoleId"
+                                   name="editProjectRole"
+                                   [searchable]="true"
+                                   [clearable]="true"
+                                   class="custom-ng-select"
+                                   required>
+                          <ng-option *ngFor="let role of optionProjectRoles" 
+                                     [value]="role.project_role_id">
+                            {{ role.project_role_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
 
                     <!-- Start Date -->
                     <div class="form-group">
@@ -209,7 +284,7 @@
                     </div>
 
                     <!-- Allocation Status -->
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label class="block mb-2 font-semibold">Allocation Status*</label>
                         <div class="flex gap-4 items-center">
                             <span class="text-sm font-medium" [class.text-gray-500]="editSelectedAllocationStatus === 0"
@@ -228,22 +303,48 @@
                                 </div>
                             </label>
                         </div>
-                    </div>
+                    </div> -->
 
+                    <div class="form-group">
+                        <label class="block mb-2 font-semibold">Allocation Status*</label>
+                        <div class="flex gap-4 items-center">
+                          <span class="text-sm font-medium" 
+                                [class.text-gray-500]="editSelectedAllocationStatus === 0"
+                                [class.text-green-600]="editSelectedAllocationStatus === 1">
+                            {{ editSelectedAllocationStatus === 1 ? '👨‍💼 Employee' : '👥 Shadow' }}
+                          </span>
+                          <label class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" 
+                                   class="sr-only peer"
+                                   [(ngModel)]="editSelectedAllocationStatus"
+                                   (ngModelChange)="onEditAllocationStatusChange($event)"
+                                   [ngModelOptions]="{standalone: true}">
+                            <div class="w-11 h-6 bg-gray-300 peer-focus:outline-none rounded-full peer
+                                 peer-checked:after:translate-x-full peer-checked:after:border-white
+                                 after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white
+                                 after:border after:rounded-full after:h-5 after:w-5 after:transition-all
+                                 peer-checked:bg-green-600">
+                            </div>
+                          </label>
+                        </div>
+                      </div>
+                    
                     <!-- Allocation Percentage -->
                     <div class="form-group">
                         <label class="block mb-2 font-semibold">Allocation Percentage*</label>
-                        <select [(ngModel)]="editSelectedAllocationPercentage" name="editAllocationPercentage"
-                            class="border p-2 w-full rounded-md" required>
-                            <option value="" disabled selected>Select Allocation Percentage</option>
-                            <option *ngFor="let percentage of allocationPercentages" [value]="percentage">
-                                {{ percentage }}%
-                            </option>
+                        <select [(ngModel)]="editSelectedAllocationPercentage" 
+                                name="editAllocationPercentage"
+                                [disabled]="editSelectedAllocationStatus === 0"
+                                class="border p-2 w-full rounded-md" 
+                                required>
+                          <option value="" disabled selected>Select Allocation Percentage</option>
+                          <option *ngFor="let percentage of allocationPercentages" [value]="percentage">
+                            {{ percentage }}%
+                          </option>
                         </select>
-                    </div>
-
+                      </div>
                     <!-- Billed Status -->
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label class="block mb-2 font-semibold">Billed Status*</label>
                         <div class="flex gap-4 items-center">
                             <span class="text-sm font-medium" [class.text-gray-500]="editSelectedBilledStatus === 0"
@@ -261,7 +362,30 @@
                                 </div>
                             </label>
                         </div>
-                    </div>
+                    </div> -->
+                    <div class="form-group">
+                        <label class="block mb-2 font-semibold">Billed Status*</label>
+                        <div class="flex gap-4 items-center">
+                          <span class="text-sm font-medium" 
+                                [class.text-gray-500]="editSelectedBilledStatus === 0"
+                                [class.text-green-600]="editSelectedBilledStatus === 1">
+                            {{ editSelectedBilledStatus === 1 ? '💰 Billed' : '❌ Not Billed' }}
+                          </span>
+                          <label class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" 
+                                   class="sr-only peer"
+                                   [(ngModel)]="editSelectedBilledStatus"
+                                   
+                                   [ngModelOptions]="{standalone: true}">
+                            <div class="w-11 h-6 bg-gray-300 peer-focus:outline-none rounded-full peer
+                                 peer-checked:after:translate-x-full peer-checked:after:border-white
+                                 after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white
+                                 after:border after:rounded-full after:h-5 after:w-5 after:transition-all
+                                 peer-checked:bg-green-600">
+                            </div>
+                          </label>
+                        </div>
+                      </div>
 
                     <!-- Billing Percentage -->
                     <div class="form-group">
